# AgenC-Operator

./: .env.desktop  .env.example  .env.mobile  .gitignore  Cargo.toml  LICENSE  README.md  build-apk.sh  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/operator-cli/: Cargo.toml
crates/operator-cli/src/: main.rs
crates/operator-core/: Cargo.toml
crates/operator-core/src/: agenc_program.rs  lib.rs  policy_gate.rs  solana_exec.rs  transaction_retry.rs  types.rs  voice_local.rs
crates/operator-core/src/access/: checker.rs  gate.rs  mod.rs  types.rs
crates/operator-core/src/auth/: mod.rs  twitter_oauth.rs
crates/operator-core/src/db/: mod.rs  store_types.rs  types.rs
crates/operator-core/src/executor/: device.rs  discord.rs  email.rs  github.rs  grok_code.rs  image.rs  jupiter_swap.rs  mod.rs  slack.rs  twitter.rs  video.rs
crates/operator-core/src/memory/: embeddings.rs  manager.rs  mod.rs  store.rs  types.rs
crates/solana-secp256r1-program/: Cargo.toml
crates/solana-secp256r1-program/src/: lib.rs
docs/: OPERATOR_DB_README.md  daz-to-glb-workflow.md  glb-optimization.md  tetsuo-3d-avatar.md
scripts/: compress-model.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: index.ts
src/audio/: pcm-capture-processor.ts
src/components/: AccessGateOverlay.tsx  AccessTierBadge.tsx  AppearanceMenu.tsx  BottomNav.tsx  ChatPanel.tsx  DevicePairingPanel.tsx  ErrorBoundary.tsx  GatedFeature.tsx  GlitchOverlay.tsx  HudPanel.tsx  OnboardingOverlay.tsx  RootErrorBoundary.tsx  StatusBar.tsx  StoreItemPreview.tsx  StorePanel.tsx  TaskMarketplace.tsx  TetsuoHologram.tsx  TitleBar.tsx  ToastContainer.tsx  TwitterConnect.tsx  VoiceButton.tsx  WalletDropdown.tsx  index.ts
src/components/TetsuoAvatar/: ErrorBoundary.tsx  TetsuoAvatar2D.tsx  TetsuoAvatar3D.tsx  index.tsx
src/config/: animationConfig.ts  arkitMorphMap.ts  modelConfig.ts  platform.ts  posePresets.ts  renderQuality.ts
src/constants/: visemeMap.ts
src/hooks/: index.ts  useAppStore.ts  useCameraController.ts  useEquipmentSystem.ts  useExpressionSystem.ts  useGazeTracking.ts  useGenesisAnimation.ts  useIdleAnimation.ts  useMobileWallet.ts  useMouthAnimation.ts  usePlatform.ts  useTalkingAnimation.ts  useVisemeDriver.ts  useVoicePipeline.ts  useWiggleBones.ts
src/stores/: avatarStore.ts  deviceStore.ts  notificationStore.ts  storeStore.ts
src/styles/: globals.css  palette.ts
src/types/: index.ts  wiggle.d.ts
src/utils/: dazMorphMap.ts  glbInspector.ts  haptics.ts  log.ts  mouthDriver.ts
