# ============================================================================
# TETSUO - AgenC Operator Workspace
# Cyberpunk voice-controlled Solana operator for the AgenC protocol
# ============================================================================

[workspace]
resolver = "2"
members = [
    "crates/operator-core",
    "crates/operator-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AgenC Team"]
license = "MIT"
repository = "https://github.com/agenc/agenc-operator"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Solana SDK for transaction building/signing
solana-sdk = "2.0"
solana-client = "2.0"

# Audio processing
cpal = "0.15"
rodio = "0.19"

# Whisper for local ASR (offline fallback)
whisper-rs = "0.11"

# WebSocket for Grok API streaming (using rustls for Windows compatibility)
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for API calls (using rustls for Windows compatibility)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Environment variable loading
dotenvy = "0.15"

# Tauri
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-build = "2.0"
tauri-plugin-updater = "2"

# Vector database for memory
qdrant-client = "1.7"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# SPL token for token gating
spl-associated-token-account = "4.0"

# Embedded database
redb = "2.4"

# Home directory resolution
dirs = "5.0"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }
