[package]
name = "agenc-operator"
version.workspace = true
edition.workspace = true
description = "Tetsuo - Cyberpunk AgenC Solana Operator"

[lib]
name = "agenc_operator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
# Core operator logic
operator-core = { path = "../crates/operator-core" }

# Solana SDK + RPC client (for Pubkey type and mobile balance queries)
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# Tauri v2
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for API calls
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }


# Environment variable loading
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Secure credential storage
keyring = "2"

# Open browser for OAuth
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
