[package]
name = "agenc-operator"
version.workspace = true
edition.workspace = true
description = "Tetsuo - Cyberpunk AgenC Solana Operator"

[lib]
name = "agenc_operator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
# Core operator logic
operator-core = { path = "../crates/operator-core", default-features = false }

# Solana SDK + RPC client (default-features = false to avoid transitive OpenSSL)
solana-sdk = { workspace = true, default-features = false }
solana-client = { workspace = true, default-features = false }

# Tauri v2
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for API calls (rustls — no OpenSSL needed for Android)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }


# Environment variable loading
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Secure credential storage
keyring = "2"

# Open browser for OAuth
open = "5"

# Hashing (description hash, proof hash for MWA unsigned tx building)
sha2 = "0.10"

# Transaction serialization (Solana wire format for MWA)
bincode = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
