[package]
name = "operator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
chrono = { workspace = true }

# Vector database for memory
qdrant-client = { workspace = true }

# UUID generation
uuid = { workspace = true }

# SPL token for token gating
spl-associated-token-account = { workspace = true }

# HTTP client for embeddings API
reqwest = { workspace = true }


# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# Audio (local voice processing)
cpal = { workspace = true }
rodio = { workspace = true }

# Local Whisper ASR for offline fallback
whisper-rs = { workspace = true }

# WebSocket for external voice API
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Base58 encoding for Solana addresses
bs58 = "0.5"

# Secure random for keypair generation
rand = "0.8"

# Async trait for executor interface
async-trait = "0.1"

# Twitter OAuth 1.0a signing (kept for backwards compat)
hmac = "0.12"
sha1 = "0.10"
percent-encoding = "2.3"
base64 = "0.22"

# Transaction serialization
bincode = "1.3"

# Embedded database
redb = { workspace = true }

# Home directory resolution
dirs = { workspace = true }

# Twitter OAuth 2.0 + PKCE
tiny_http = "0.12"
sha2 = "0.10"
url = "2.5"
urlencoding = "2.1"
