[package]
name = "operator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
chrono = { workspace = true }

# Vector database for memory
qdrant-client = { workspace = true }

# UUID generation
uuid = { workspace = true }

# SPL token for token gating and SKR escrows
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }

# HTTP client for embeddings API (rustls — no OpenSSL needed for Android)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }


# Solana (default-features = false to avoid transitive OpenSSL)
solana-sdk = { workspace = true, default-features = false }
solana-client = { workspace = true, default-features = false }

# Audio (local voice processing) — gated behind "native-audio" feature for mobile builds
cpal = { workspace = true, optional = true }
rodio = { workspace = true, optional = true }

# Local Whisper ASR for offline fallback — gated behind "native-audio"
whisper-rs = { workspace = true, optional = true }

# WebSocket for external voice API
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Base58 encoding for Solana addresses
bs58 = "0.5"

# Secure random for keypair generation
rand = "0.8"

# Async trait for executor interface
async-trait = "0.1"

# Twitter OAuth 1.0a signing (kept for backwards compat)
hmac = "0.12"
sha1 = "0.10"
percent-encoding = "2.3"
base64 = "0.22"

# Transaction serialization
bincode = "1.3"

# Embedded database
redb = { workspace = true }

# Home directory resolution
dirs = { workspace = true }

# Twitter OAuth 2.0 + PKCE
tiny_http = "0.12"
sha2 = "0.10"
url = "2.5"
urlencoding = "2.1"

[features]
default = ["native-audio"]
native-audio = ["dep:cpal", "dep:rodio", "dep:whisper-rs"]
